# elena-protocol

./: .gitignore  Dockerfile  Dockerfile.node-gateway  docker-compose.node.yml  docker-compose.yml  render.yaml  ПРОЕКТ_ТЕКУЩЕЕ_СОСТОЯНИЕ.md
.github/workflows/: build-windows.yml
docs/: DEPLOY_STATUS.md  ELENA_WHITEPAPER_v2.html  FULL_DEPLOY_GUIDE.md  INTERFACES_README.md  ONE_EXE_WINDOWS.md  TOKENOMICS_ELENA.md  WALLET_AND_SECURITY.md  WALLET_MODEL.md  create_tokenomics_docx.py
elena-core/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
elena-core/docs/: TOKENOMICS.md
elena-core/scripts/: docker-entrypoint.sh  run_network.sh
elena-core/src/: economics.rs  lib.rs  main.rs
elena-core/src/consensus/: echo.rs  mod.rs
elena-core/src/crypto/: mod.rs
elena-core/src/graph/: mod.rs  transaction.rs
elena-core/src/network/: mod.rs  p2p.rs
elena-core/src/node/: mod.rs
elena-core/tests/: integration.rs
elena-desktop/: README.md  build-windows.bat  index.html  package-lock.json  package.json
elena-desktop/src/: App.tsx
elena-desktop/src-tauri/: Cargo.toml  tauri.conf.json
elena-gateway/: Cargo.toml  Dockerfile
elena-gateway/src/: main.rs
elena-owner-dashboard/: Dockerfile  index.html  package-lock.json  package.json
elena-owner-dashboard/src/: App.css  App.tsx
elena-sim/: README.md  RESULTS.md  main.py  plot_results.py  requirements.txt  run_ab_tests.sh  run_batch.py
elena-web/: .env.example  DEPLOY.md  Dockerfile  README.md  index.html  package-lock.json  package.json
scripts/: build-node-bins.sh  run-node-gateway.sh
(+38 files in other folders)
