[package]
name = "elena-gateway"
version = "0.1.0"
edition = "2021"
description = "REST + WebSocket API Gateway for Elena network"

[dependencies]
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
